fix layout alignment

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -67,6 +67,12 @@ h6 {
   font-family: $font-primary;
 }
 
+.border-bottom-category {
+  border: 2px solid $danger;
+  height: 0;
+  width: 70%;
+}
+
 .border-bottom {
   border: 2px solid $danger;
   height: 0;
@@ -188,13 +194,13 @@ footer {
 
 // Aside Menu
 .aside-menu {
-  flex-basis: 30%;
+  flex-basis: 100%;
   box-shadow: 1px 1px 1px 1px lightgrey;
-  height: 61.7rem;
+  height: 40.7rem;
 }
 
 .search-article {
-  flex-basis: 70%;
+  flex-basis: 100%;
   box-shadow: 1px 1px 1px 0 lightgrey;
   height: auto;
 }
@@ -233,7 +239,7 @@ footer {
 
 .search-form {
   justify-content: space-around;
-  // width: 70%;
+  width: 60%;
   margin: 0 auto;
 }
 
@@ -262,6 +268,29 @@ footer {
       width: 15px;
     }
   }
+  .search-article {
+    flex-basis: 70%;
+  }
+  .aside-menu {
+    flex-basis: 30%;
+    height: 61.7rem;
+  }
+  .search-form {
+    width: 85%;
+    margin: 0 auto;
+  }
+
+  .border-bottom-category {
+    border: 2px solid $danger;
+    height: 0;
+    width: 50%;
+  }
+  
+  .border-bottom {
+    border: 2px solid $danger;
+    height: 0;
+    width: 50%;
+  }
 }
 
 // large screen
@@ -285,9 +314,20 @@ footer {
     }
   }
 
+  .custom {
+    width: 15px;
+  }
   .search-form {
     width: 50%;
     margin: 0 auto;
+  }
+
+  .search-article {
+    flex-basis: 70%;
+  }
+  .aside-menu {
+    flex-basis: 30%;
+    height: 61.7rem;
   }
 }
 
@@ -312,5 +352,9 @@ footer {
         }
       }
     }
+  }
+  
+  .custom {
+    width: 15px;
   }
 }
